style.css
/* font inter  */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

/* noto serif */
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.logo-img {
    width: 7rem;
    height: auto;
}

nav {
    padding: 1rem 8rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-family: "Inter", sans-serif;
}

.nav-links {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;
}

.nav-links li {
    list-style: none;
}

.nav-links a {
    text-decoration: none;
    font-weight: 500;
    font-size: .85rem;
    color: #8987A1;
}

#home a {
    color: #000;
    font-weight: bold;
}


.cart {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: .3rem;
}

.cart a {
    color: black;
}

.cart img {
    width: 1.3rem;
    height: auto;
    cursor: pointer;
}

.cart img:hover {
    transform: scale(1.1);
    transition: all 0.3s ease-in-out;
}


/* HERO SECTION STYLE  */

.hero-section {
    padding: 3rem 8rem;
    display: flex;
    align-items: end;
    justify-content: space-between;
    margin-top: 10vh;
}

.hero-details-con {
    display: flex;
    flex-direction: column;
    font-family: "Noto Serif", serif;
    gap: 1rem;


}

.hero-details-con h1 {
    font-size: 3.2rem;
    font-weight: 600;
    color: #000;

}

.hero-details-con h1 span {
    color: #E95A08;
}

.hero-details-con p {
    font-size: 1.2rem;
    font-family: "Inter", sans-serif;
    color: #8987A1;
}

.hero-img {
    width: 50%;
}

/* plants section style  */

#shop {
    padding: 3rem 8rem;
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.plants-section-description {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;

}

.plants-section-description h1 {
    font-family: "Noto Serif", serif;
    font-size: 3rem;
    font-weight: 600;
    color: #000;
}

.plants-section-description h1 span {
    color: #E95A08;
}

.plants-section-description p {
    font-family: "Inter", sans-serif;
    padding: 0 10%;
    font-size: 1.2rem;
    text-align: center;
    color: #8987A1;
}

/* plants card con  */

.plants-card-con {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 20px;
}

.plants-card {
    font-family: "Inter", sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 1.4rem;
    padding: .5rem;

}

.card-sec1 {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: .5rem;
}

.plants-card img {
    width: 100%;
    height: auto;

}

.plants-card-title {
    font-weight: 500;
    font-size: 1.3rem;
    color: #000;
}

.plants-card-price {
    font-weight: 700;
    font-size: 1.3rem;
    color: black;
}

.add-to-cart-btn {
    background-color: #E95A08;
    color: white;
    padding: .5rem 1.5rem;
    border: none;

    cursor: pointer;
    font-weight: 500;
    font-size: 1rem;
    transition: all 0.3s ease-in-out;
    width: 100%;
}

/* Trusted seller section style  */

.t-seller-section {
    padding: 3rem 8rem;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: 3rem;
}

.t-seller-con1 {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
}

.t-seller-img1 {
    width: 50%;
    height: auto;
    position: absolute;
    top: -20%;
    right: -20%;
    z-index: 10;

    animation: rotateBadge 8s linear infinite;
}

@keyframes rotateBadge {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }

}


.t-seller-img2 {
    width: 100%;
    height: auto;
}

.t-seller-con2 {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    gap: 1.2rem;
}

.t-seller-con2 h1 {
    font-family: "Noto Serif", serif;
    font-size: 3rem;
    font-weight: 600;
    color: #000;
}

.t-seller-con2 ul li {
    font-family: "Inter", sans-serif;
    font-size: 1.11rem;
    color: #8987A1;
    margin-left: 1.2rem;
}

.t-seller-con2 ul {
    display: flex;
    flex-direction: column;
    gap: 1.2rem;
}



/* offer-section-style  */

.offer-section {
    padding: 3rem 8rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 2rem;
}


/* -------------------------- */

.offer-layout {
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: repeat(2, 1fr);
    gap: 20px;
    padding: 40px 0;
}





.card {

    position: relative;
    background-size: cover;
    background-position: center;
    border-radius: 20px;
    color: white;
    font-family: sans-serif;
    padding: 30px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
    font-family: "Noto Serif", serif;
}

.bloom {
    background-image: url('./assets/deal-bloom.png');

    grid-column: 1 / 2;
    grid-row: 1 / 2;
}

.ana {
    background-image: url('./assets/deal-ana.png');
    grid-column: 1 / 2;
    grid-row: 2 / 3;
}

.zabo {
    background-image: url('./assets/deal-zabo.png');
    grid-column: 2 / 3;
    grid-row: 1 / 3;
}

.card-sub-con {
    padding: 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.card h2 {
    font-size: 1rem;
    font-weight: bold;
    margin-bottom: 10px;
}

.card a {
    font-size: .8rem;
    color: white;
    text-decoration: underline;
    font-weight: bold;
}


/* for zabo  */

.zabo h2 {
    font-size: 2rem;
    font-weight: 700;

}

.zabo a {
    font-size: 1.5rem;
    text-decoration: none;
    font-weight: 500;
    text-decoration: underline;
}


/* for dark mode  */
.card::before {
    content: '';
    position: absolute;
    inset: 0;
    background: rgba(0, 0, 0, 0.4);
    border-radius: 20px;
    z-index: 1;
}

.card h2,
.card a {
    position: relative;
    z-index: 2;
}


/* mail section style  */
.mail-section {
    background-image: url(./assets/news-letter-bg.png);
    background-size: cover;
    background-position: center;
    width: 100%;
    height: 100%;
    padding: 10rem 0;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #E95A08;
}

.mail-con {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;
}

.mail-con .input {
    display: flex;
    gap: 0;
    width: 110%;

}

.input input {
    padding: .9rem 1rem;
    border: none;
    width: 100%;
    font-size: 1rem;
    font-family: "Inter", sans-serif;
}

.input input:focus {
    outline: none;
}

.input button {
    background-color: #E95A08;
    color: white;
    padding: .9rem 3.5rem;
    border: none;
    cursor: pointer;
    font-weight: 500;
    font-size: 1rem;

}

.mail-con h1 {
    font-family: "Noto Serif", serif;
    font-size: 3rem;
    color: white;
    text-align: center;
}



/* footer section style  */
footer {
    background-color: #fafbff;
    padding: 2rem 8rem;
}

.footer-con {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;

}

.footer-logo-con {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 1rem;
}

.footer-logo-con p {
    font-size: 1.2rem;
    font-family: "Inter", sans-serif;
    color: #8987A1;
}

.footer-links li {
    list-style: none;

}

.footer-links li a {
    text-decoration: none;
    color: #8987A1;
    font-family: "Inter", sans-serif;
    font-size: .87rem;

}

.footer-links {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(5, 1fr);
    gap: 2rem;
}

.footer-con .social-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1.5rem;

}



.footer-con .social-icon img {
    width: 2rem;
    height: 2rem;
}

#x {
    width: 1rem;
    height: 1rem;
}


/*  responsive media Query for mobile*/
.hide {
    display: none;
}

@media screen and (max-width: 576px) {
    .footer-con {
        flex-direction: column;
        gap: 3rem;
        align-items: flex-start;
    }

    footer {
        padding: 2rem;
    }

    .footer-links {
        grid-template-columns: repeat(1, 1fr);
        gap: 2rem;

    }

    .mail-section {
        padding: 2rem;
        padding-top: 5rem;
    }

    .mail-con h1 {
        font-size: 1rem;
        width: 100%;

    }

    

.input input {
    padding: .4rem .6rem;
    font-size: .5rem;
}
.input button {
    
 padding: .4rem .6rem;
    font-size: .5rem;
}

}

